--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.7.0",
+    "@azure/cosmos": "^4.3.0",
+    "@azure/openai": "^1.0.0-beta.10",
+    "@azure/storage-blob": "^12.27.0",
+    "@types/sanitize-html": "^2.15.0",
+    "clsx": "^2.1.1",
+    "microsoft-cognitiveservices-speech-sdk": "^1.43.1",
     "next": "15.2.4",
+    "pdf-parse": "^1.1.1",
     "pm2": "^6.0.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "sanitize-html": "^2.15.0",
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +38,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
