--- a/.github/workflows/main_tpa-web-app.yml
+++ b/.github/workflows/main_tpa-web-app.yml
@@ -28,6 +28,9 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
+          ESLINT_SKIP: true
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
