edits to main_tpa-web-app.yml

--- a/.github/workflows/main_tpa-web-app.yml
+++ b/.github/workflows/main_tpa-web-app.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
+      actions: write #This is required for managing artifacts
 
     steps:
       - uses: actions/checkout@v4
