--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sanitize-html": "^2.15.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.2.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
