--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:-8080}",
+    "start:local": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,7 +21,6 @@
     "next": "15.2.4",
     "openai": "^4.93.0",
     "pdf-parse": "^1.1.1",
-    "pm2": "^6.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
