refactor: OD-47 adding temp library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/sanitize-html": "^2.15.0",
     "clsx": "^2.1.1",
     "cockatiel": "^3.2.1",
+    "csv-stringify": "^6.6.0",
     "lucide-react": "^0.503.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.43.1",
     "next": "15.2.4",
